tests/neg/missing-implicit3.check
-- [E172] Type Error: tests/neg/missing-implicit3.scala:13:36 ----------------------------------------------------------
13 |val sortedFoos = sort(List(new Foo)) // error
   |                                    ^
   |No given instance of type ord.Foo => Comparable[? >: ord.Foo] was found for parameter x$1 of given instance ordered in object Ord
   |
   |The following import might make progress towards fixing the problem:
   |
   |  import scala.math.Ordered.orderingToOrdered
   |
